CREATE TABLE "ROL" (
  "ID_ROLE" varchar(15) PRIMARY KEY
);

CREATE TABLE "STATUS_WAREHOUSE" (
  "ID_STATUS" varchar(20) PRIMARY KEY
);

CREATE TABLE "ADDRESS_NODE_TYPE" (
  "ID_ANT" varchar(38) PRIMARY KEY,
  "NODE_TYPE" varchar(50)
);

CREATE TABLE "PRODUCT_CATEGORY" (
  "ID_CATEGORY" INT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  "NAME" varchar(35)
);

CREATE TABLE "APP_PROFILE" (
  "ID_USER2" varchar(38) PRIMARY KEY,
  "NAME" varchar(35),
  "LASTNAME" varchar(35),
  "LASTNAME2" varchar(35),
  "DESCRIPTION" text,
  "BIRTH_DATE" date,
  "CREATED_AT" date
);

CREATE TABLE "APP_USER" (
  "ID_USER" varchar(38) PRIMARY KEY,
  "ID_USER2" varchar(38),
  "PASSWORD" varchar(72)
);

CREATE TABLE "CUSTOMER" (
  "ID_USER" varchar(38),
  "ID_CUSTOMER" varchar(38),
  PRIMARY KEY ("ID_USER", "ID_CUSTOMER")
);

CREATE TABLE "PRODUCT_CUSTOMER_REVIEW" (
  "ID_PRODUCT" varchar(38) NOT NULL,
  "ID_USER" varchar(38) NOT NULL,
  "ID_CUSTOMER" varchar(38) NOT NULL,
  "RATING" smallint NOT NULL,
  "REVIEW_TEXT" text,
  "CREATED_AT" date NOT NULL,
  "UPDATE_AT" date,
  PRIMARY KEY ("ID_PRODUCT", "ID_USER", "ID_CUSTOMER")
);

CREATE TABLE "EMPLOYEE" (
  "ID_USER" varchar(38),
  "ID_EMPLOYEE" varchar(38),
  "MANAGER_ID_USER" varchar(38),
  "MANAGER_ID_EMPLOYEE" varchar(38),
  "JOB_TITLE" char(80),
  PRIMARY KEY ("ID_USER", "ID_EMPLOYEE")
);

CREATE TABLE "WAREHOUSE" (
  "ID_WAREHOUSE" varchar(38) PRIMARY KEY,
  "ID_STATUS" varchar(20),
  "ID_LOCATION_WAREHOUSE" varchar(38),
  "CODE" varchar(7)
);

CREATE TABLE "WAREHOUSE_TRANSFER" (
  "ID_WAREHOUSE_TRANSFER" varchar(38) PRIMARY KEY,
  "ID_WAREHOUSE_ORIGIN" varchar(38) NOT NULL,
  "ID_WAREHOUSE_DESTINATION" varchar(38) NOT NULL,
  "STATUS" varchar(20),
  "CREATED_AT" timestamp NOT NULL,
  "COMPLETED_AT" timestamp
);

CREATE TABLE "WAREHOUSE_TRANSFER_DETAIL" (
  "ID_WAREHOUSE_TRANSFER" varchar(38) NOT NULL,
  "ID_PRODUCT" varchar(38) NOT NULL,
  "QUANTITY" smallint NOT NULL,
  PRIMARY KEY ("ID_WAREHOUSE_TRANSFER", "ID_PRODUCT")
);

CREATE TABLE "LOCATION_WAREHOUSE" (
  "ID_LOCATION_WAREHOUSE" varchar(38) PRIMARY KEY,
  "LAT" numeric(10,20),
  "LONG" numeric(10,20),
  "DESC" text,
  "LOCATE" text
);

CREATE TABLE "INVENTORY" (
  "ID_INVENTORY" varchar(38) PRIMARY KEY,
  "ID_WAREHOUSE" varchar(38)
);

CREATE TABLE "BRAND" (
  "ID_BRAND" varchar(38) PRIMARY KEY,
  "NAME" varchar(30),
  "DESCRIPTION" TEXT
);

CREATE TABLE "PRODUCT_STATE" (
  "ID_PRODUCT_STATE" varchar(10) PRIMARY KEY
);

CREATE TABLE "PRODUCT" (
  "ID_PRODUCT" varchar(38) PRIMARY KEY,
  "ID_BRAND" varchar(38),
  "ID_PRODUCT_STATE" varchar(10),
  "META_TITLE" varchar(100),
  "META_DESCRIPTION" text,
  "DESCRIPTION" text
);

CREATE TABLE "PRODUCT_IMAGES" (
  "ID_PRODUCT_IMAGES" varchar(38) PRIMARY KEY,
  "ID_PRODUCT" varchar(38),
  "URL" varchar(255)
);

CREATE TABLE "INVENTORY_STOCK" (
  "ID_PRODUCT" varchar(38),
  "ID_INVENTORY" varchar(38),
  "QUANTITY" smallint,
  "MIN_STOCK_ALERT" smallint,
  "MAX_STOCK" smallint,
  PRIMARY KEY ("ID_PRODUCT", "ID_INVENTORY")
);

CREATE TABLE "SALE_ORDER" (
  "ID_SALE_ORDER" varchar(38) PRIMARY KEY,
  "SELLER_ID_USER" varchar(38),
  "SELLER_ID_EMPLOYEE" varchar(38),
  "CUSTOMER_ID_USER" varchar(38),
  "ID_CUSTOMER" varchar(38),
  "ORDER_ADDRESS" text,
  "TOTAL_PRICE" number(12,3),
  "CREATED_AT" date
);

CREATE TABLE "SHIPMENT" (
  "ID_SHIPMENT" varchar(38) PRIMARY KEY,
  "ID_SALE_ORDER" varchar(38),
  "ID_CARRIER" varchar(38) NOT NULL,
  "TRACKING_NUMBER" varchar(50),
  "SHIPPED_AT" timestamp,
  "DELIVERED_AT" timestamp
);

CREATE TABLE "CARRIER" (
  "ID_CARRIER" varchar(38) PRIMARY KEY,
  "NAME" varchar(50) NOT NULL,
  "ID_CARRIER_TYPE" varchar(38) NOT NULL,
  "ID_CARRIER_STATUS" varchar(38) NOT NULL
);

CREATE TABLE "CARRIER_STATUS" (
  "ID_CARRIER_STATUS" varchar(38) PRIMARY KEY,
  "NAME" varchar(20) NOT NULL,
  "DESCRIPTION" varchar(100)
);

CREATE TABLE "CARRIER_TYPE" (
  "ID_CARRIER_TYPE" varchar(38) PRIMARY KEY,
  "NAME" varchar(20) NOT NULL,
  "DESCRIPTION" varchar(100)
);

CREATE TABLE "VEHICLE" (
  "ID_VEHICLE" varchar(38) PRIMARY KEY,
  "ID_CARRIER" varchar(38) NOT NULL,
  "PLATE" varchar(10) UNIQUE NOT NULL,
  "VEHICLE_TYPE" varchar(20),
  "CAPACITY" numeric(10,2),
  "STATUS" varchar(15)
);

CREATE TABLE "TRANSPORT_ROUTE" (
  "ID_ROUTE" varchar(38) PRIMARY KEY,
  "ID_CARRIER" varchar(38) NOT NULL,
  "ID_VEHICLE" varchar(38) NOT NULL,
  "ORIGIN_ADDRESS_ID" varchar(38),
  "DESTINATION_ADDRESS_ID" varchar(38),
  "PARENT_ROUTE_ID" varchar(38),
  "ROUTE_ORDER" smallint,
  "DISTANCE_KM" numeric(8,2),
  "ESTIMATED_TIME_MIN" integer,
  "STATUS" varchar(15)
);

CREATE TABLE "SALE_ORDER_DETAILS" (
  "ID_SALE_ORDER" varchar(38) NOT NULL,
  "ID_PRODUCT" varchar(38) NOT NULL,
  "ID_SALE_ORDER_STATUS_HISTORY" varchar(38) NOT NULL,
  "QUANTITY" smallint NOT NULL,
  "UNIT_PRICE" numeric(9,3) NOT NULL,
  "TAX" numeric(9,3),
  "TOTAL_ITEM_PRICE" numeric(12,3) NOT NULL,
  PRIMARY KEY ("ID_SALE_ORDER", "ID_PRODUCT")
);

CREATE TABLE "PAYMENT_TYPE" (
  "ID_PAYMENT_TYPE" varchar(38) NOT NULL,
  "NAME_PAYMENT" varchar(20) NOT NULL
);

CREATE TABLE "PAYMENT_ORDER" (
  "ID_SALE_ORDER" varchar(38) NOT NULL,
  "ID_PAYMENT_TYPE" varchar(38) NOT NULL,
  "AMOUNT_PAID" numeric(12,3) NOT NULL,
  "TAX" numeric(9,3),
  "EXTERNAL_TRANSACTION_ID" varchar(255),
  "RESPONSE_CODE" varchar(30),
  "PAYMENT_GATEWAY" varchar(255),
  PRIMARY KEY ("ID_SALE_ORDER", "ID_PAYMENT_TYPE")
);

CREATE TABLE "SALE_ORDER_STATUS_HISTORY" (
  "ID_SALE_ORDER_STATUS_HISTORY" varchar(38) PRIMARY KEY,
  "ID_SALE_ORDER_STATUS" varchar(15) NOT NULL,
  "DATE" timestamp
);

CREATE TABLE "SALE_ORDER_STATUS" (
  "ID_STATUS" varchar(15)
);

CREATE TABLE "SALE_PRICE_HISTORY" (
  "ID_SALE_PRICE_HISTORY" varchar(38) PRIMARY KEY,
  "ID_PRODUCT" varchar(38),
  "DATE" date,
  "PRICE" numeric(5,5)
);

CREATE TABLE "COUPON_TYPES" (
  "ID_TYPE" varchar(38) PRIMARY KEY,
  "NAME" varchar(50),
  "DESCRIPTION" varchar(200)
);

CREATE TABLE "COUPONS" (
  "ID_COUPONS" varchar(38) PRIMARY KEY,
  "CODE" varchar(20) UNIQUE,
  "DATE_START" date,
  "DATE_FINISH" date,
  "MIN_SALE" decimal(10,2),
  "DISCOUNT_VALUE" decimal(6,2),
  "ID_TYPE" varchar(38),
  "STATUS" varchar(15)
);

CREATE TABLE "ORDER_COUPONS" (
  "ID_SALE_ORDER" varchar(38) NOT NULL,
  "ID_COUPONS" varchar(38) NOT NULL,
  "DISCOUNT_APPLIED" decimal(10,2) NOT NULL,
  "APPLIED_AT" date NOT NULL,
  PRIMARY KEY ("ID_SALE_ORDER", "ID_COUPONS")
);

CREATE TABLE "ADDRESS_NODE_NAMES" (
  "ID_ANN" varchar(38) PRIMARY KEY,
  "ID_ANT" varchar(38),
  "NAME" varchar(35)
);

CREATE TABLE "ADDRESS_NODE" (
  "ID_NODE" varchar(38) PRIMARY KEY,
  "ID_ANN" varchar(38),
  "ID_USER2" varchar(38),
  "APP_ID_USER2" varchar(38),
  "ADD_ID_NODE" varchar(38),
  "NUMB" varchar(50),
  "ORDER_INDEX" char(10)
);

CREATE TABLE "BELONGS_TO" (
  "ID_CATEGORY" int,
  "ID_PRODUCT" char(38),
  PRIMARY KEY ("ID_CATEGORY", "ID_PRODUCT")
);

CREATE TABLE "USER_ROL" (
  "ID_USER" varchar(38),
  "ID_ROLE" varchar(15),
  PRIMARY KEY ("ID_USER", "ID_ROLE")
);

CREATE TABLE "WISHLIST" (
  "ID_WISHLIST" varchar(38) PRIMARY KEY,
  "ID_USER" varchar(38) NOT NULL,
  "ID_CUSTOMER" varchar(38) NOT NULL,
  "NAME" varchar(50),
  "CREATED_AT" date NOT NULL
);

CREATE TABLE "WISHLIST_PRODUCT" (
  "ID_WISHLIST" varchar(38) NOT NULL,
  "ID_PRODUCT" varchar(38) NOT NULL,
  "ADDED_AT" date NOT NULL,
  PRIMARY KEY ("ID_WISHLIST", "ID_PRODUCT")
);

ALTER TABLE "CARRIER" ADD FOREIGN KEY ("ID_CARRIER_TYPE") REFERENCES "CARRIER_TYPE" ("ID_CARRIER_TYPE");

ALTER TABLE "CARRIER" ADD FOREIGN KEY ("ID_CARRIER_STATUS") REFERENCES "CARRIER_STATUS" ("ID_CARRIER_STATUS");

ALTER TABLE "VEHICLE" ADD FOREIGN KEY ("ID_CARRIER") REFERENCES "CARRIER" ("ID_CARRIER");

ALTER TABLE "TRANSPORT_ROUTE" ADD FOREIGN KEY ("ID_CARRIER") REFERENCES "CARRIER" ("ID_CARRIER");

ALTER TABLE "TRANSPORT_ROUTE" ADD FOREIGN KEY ("ID_VEHICLE") REFERENCES "VEHICLE" ("ID_VEHICLE");

ALTER TABLE "TRANSPORT_ROUTE" ADD FOREIGN KEY ("PARENT_ROUTE_ID") REFERENCES "TRANSPORT_ROUTE" ("ID_ROUTE");

ALTER TABLE "COUPONS" ADD FOREIGN KEY ("ID_TYPE") REFERENCES "COUPON_TYPES" ("ID_TYPE");

ALTER TABLE "APP_USER" ADD FOREIGN KEY ("ID_USER2") REFERENCES "APP_PROFILE" ("ID_USER2");

ALTER TABLE "EMPLOYEE" ADD FOREIGN KEY ("ID_USER") REFERENCES "APP_USER" ("ID_USER");

ALTER TABLE "WAREHOUSE" ADD FOREIGN KEY ("ID_STATUS") REFERENCES "STATUS_WAREHOUSE" ("ID_STATUS");

ALTER TABLE "WAREHOUSE" ADD FOREIGN KEY ("ID_LOCATION_WAREHOUSE") REFERENCES "LOCATION_WAREHOUSE" ("ID_LOCATION_WAREHOUSE");

ALTER TABLE "INVENTORY" ADD FOREIGN KEY ("ID_WAREHOUSE") REFERENCES "WAREHOUSE" ("ID_WAREHOUSE");

ALTER TABLE "INVENTORY_STOCK" ADD FOREIGN KEY ("ID_INVENTORY") REFERENCES "INVENTORY" ("ID_INVENTORY");

ALTER TABLE "INVENTORY_STOCK" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");

ALTER TABLE "SALE_ORDER" ADD FOREIGN KEY ("ID_CUSTOMER") REFERENCES "CUSTOMER" ("ID_CUSTOMER");

ALTER TABLE "SALE_ORDER" ADD FOREIGN KEY ("CUSTOMER_ID_USER") REFERENCES "CUSTOMER" ("ID_USER");

ALTER TABLE "SALE_ORDER" ADD FOREIGN KEY ("SELLER_ID_USER") REFERENCES "EMPLOYEE" ("ID_USER");

ALTER TABLE "SALE_ORDER" ADD FOREIGN KEY ("SELLER_ID_EMPLOYEE") REFERENCES "EMPLOYEE" ("ID_EMPLOYEE");

ALTER TABLE "SALE_ORDER_DETAILS" ADD FOREIGN KEY ("ID_SALE_ORDER") REFERENCES "SALE_ORDER" ("ID_SALE_ORDER");

ALTER TABLE "SALE_ORDER_DETAILS" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");

ALTER TABLE "SALE_PRICE_HISTORY" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");

ALTER TABLE "ADDRESS_NODE" ADD FOREIGN KEY ("ID_ANN") REFERENCES "ADDRESS_NODE_NAMES" ("ID_ANN");

ALTER TABLE "ADDRESS_NODE" ADD FOREIGN KEY ("ID_USER2") REFERENCES "APP_PROFILE" ("ID_USER2");

ALTER TABLE "ADDRESS_NODE" ADD FOREIGN KEY ("APP_ID_USER2") REFERENCES "APP_PROFILE" ("ID_USER2");

ALTER TABLE "ADDRESS_NODE" ADD FOREIGN KEY ("ADD_ID_NODE") REFERENCES "ADDRESS_NODE" ("ID_NODE");

ALTER TABLE "ADDRESS_NODE_NAMES" ADD FOREIGN KEY ("ID_ANT") REFERENCES "ADDRESS_NODE_TYPE" ("ID_ANT");

ALTER TABLE "BELONGS_TO" ADD FOREIGN KEY ("ID_CATEGORY") REFERENCES "PRODUCT_CATEGORY" ("ID_CATEGORY");

ALTER TABLE "BELONGS_TO" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");

ALTER TABLE "USER_ROL" ADD FOREIGN KEY ("ID_USER") REFERENCES "APP_USER" ("ID_USER");

ALTER TABLE "USER_ROL" ADD FOREIGN KEY ("ID_ROLE") REFERENCES "ROL" ("ID_ROLE");

ALTER TABLE "ADDRESS_NODE" ADD FOREIGN KEY ("ID_USER2") REFERENCES "ADDRESS_NODE" ("ID_NODE");

ALTER TABLE "CUSTOMER" ADD FOREIGN KEY ("ID_USER") REFERENCES "APP_USER" ("ID_USER");

ALTER TABLE "PRODUCT" ADD FOREIGN KEY ("ID_BRAND") REFERENCES "BRAND" ("ID_BRAND");

ALTER TABLE "PRODUCT" ADD FOREIGN KEY ("ID_PRODUCT_STATE") REFERENCES "PRODUCT_STATE" ("ID_PRODUCT_STATE");

ALTER TABLE "PRODUCT_IMAGES" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");

ALTER TABLE "SHIPMENT" ADD FOREIGN KEY ("ID_SALE_ORDER") REFERENCES "SALE_ORDER" ("ID_SALE_ORDER");

ALTER TABLE "SHIPMENT" ADD FOREIGN KEY ("ID_CARRIER") REFERENCES "CARRIER" ("ID_CARRIER");

ALTER TABLE "SALE_ORDER_DETAILS" ADD FOREIGN KEY ("ID_SALE_ORDER_STATUS_HISTORY") REFERENCES "SALE_ORDER_STATUS_HISTORY" ("ID_SALE_ORDER_STATUS_HISTORY");

ALTER TABLE "SALE_ORDER_STATUS_HISTORY" ADD FOREIGN KEY ("ID_SALE_ORDER_STATUS") REFERENCES "SALE_ORDER_STATUS" ("ID_STATUS");

ALTER TABLE "PAYMENT_ORDER" ADD FOREIGN KEY ("ID_PAYMENT_TYPE") REFERENCES "PAYMENT_TYPE" ("ID_PAYMENT_TYPE");

ALTER TABLE "PAYMENT_ORDER" ADD FOREIGN KEY ("ID_SALE_ORDER") REFERENCES "SALE_ORDER" ("ID_SALE_ORDER");

ALTER TABLE "ORDER_COUPONS" ADD FOREIGN KEY ("ID_SALE_ORDER") REFERENCES "SALE_ORDER" ("ID_SALE_ORDER");

ALTER TABLE "ORDER_COUPONS" ADD FOREIGN KEY ("ID_COUPONS") REFERENCES "COUPONS" ("ID_COUPONS");

ALTER TABLE "PRODUCT_CUSTOMER_REVIEW" ADD FOREIGN KEY ("ID_USER") REFERENCES "CUSTOMER" ("ID_USER");

ALTER TABLE "PRODUCT_CUSTOMER_REVIEW" ADD FOREIGN KEY ("ID_CUSTOMER") REFERENCES "CUSTOMER" ("ID_CUSTOMER");

ALTER TABLE "PRODUCT_CUSTOMER_REVIEW" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");

ALTER TABLE "WISHLIST_PRODUCT" ADD FOREIGN KEY ("ID_WISHLIST") REFERENCES "WISHLIST" ("ID_WISHLIST");

ALTER TABLE "WISHLIST" ADD FOREIGN KEY ("ID_USER") REFERENCES "CUSTOMER" ("ID_USER");

ALTER TABLE "WISHLIST" ADD FOREIGN KEY ("ID_CUSTOMER") REFERENCES "CUSTOMER" ("ID_CUSTOMER");

ALTER TABLE "WISHLIST_PRODUCT" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");

ALTER TABLE "WAREHOUSE_TRANSFER" ADD FOREIGN KEY ("ID_WAREHOUSE_ORIGIN") REFERENCES "WAREHOUSE" ("ID_WAREHOUSE");

ALTER TABLE "WAREHOUSE_TRANSFER" ADD FOREIGN KEY ("ID_WAREHOUSE_DESTINATION") REFERENCES "WAREHOUSE" ("ID_WAREHOUSE");

ALTER TABLE "WAREHOUSE_TRANSFER_DETAIL" ADD FOREIGN KEY ("ID_WAREHOUSE_TRANSFER") REFERENCES "WAREHOUSE_TRANSFER" ("ID_WAREHOUSE_TRANSFER");

ALTER TABLE "WAREHOUSE_TRANSFER_DETAIL" ADD FOREIGN KEY ("ID_PRODUCT") REFERENCES "PRODUCT" ("ID_PRODUCT");
